--- a/public/www/css/header.css
+++ b/public/www/css/header.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 70px;
   background-color: #fff;
-  z-index: 999999;
+  z-index: 9999;
 }
 .header::before {
   content: "";
@@ -22,7 +22,7 @@
   justify-content: space-between;
   align-items: center;
   /* width: calc(100% - 20px);
-  max-width: 1120px; */
+    max-width: 1120px; */
   width: 1120px;
   height: 100%;
   margin: 0px auto;
@@ -114,39 +114,104 @@
 }
 .header-icon-list-menu svg {
 }
+.header-pc {
+  display: flex;
+  flex-direction: column;
+}
+.header-pc-menu {
+  position: fixed;
+  bottom: 0px;
+  right: 0px;
+  z-index: 999999;
+  /* width: 300px; */
+  height: 100%;
+  background-color: #fff;
+}
 
+.pc-menu-login {
+  display: flex;
+  margin-bottom: 20px;
+}
+.pc-menu-login a {
+  display: flex;
+  align-items: center;
+}
+.pc-menu-login img {
+  display: block;
+  width: 40px;
+  height: 40px;
+  mask-image: url(../images/squircle.svg);
+  mask-size: 100% 100%;
+}
+.pc-menu-my {
+  /* display: flex; */
+}
+.menu-my {
+}
+.pc-menu-my li {
+  border: 1px solid rgba(0, 0, 0, 0.03);
+  border-radius: 6px;
+  background-color: rgb(249, 249, 249);
+}
+
+.pc-menu-my a {
+  display: flex;
+  justify-content: center;
+  padding: 12px;
+}
+.pc-menu-nav {
+  padding-top: 28px;
+}
+.pc-menu-nav-one {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.pc-menu-nav-two {
+  padding-top: 20px;
+}
+/* 어두운배경 */
+.header-pc-bg {
+  position: fixed;
+  z-index: 99999;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+}
 /* @media all and (max-width: 1140px) {
-  .header {
-    height: 92px;
-  }
-  .header-inner {
-    display: block;
-  }
-  .header-logo {
-    display: flex;
-    justify-content: center;
-    height: 55px;
-  }
-  .header-menu {
-    display: flex;
-    height: 37px;
-  }
-  .header-menu-list {
-  }
-  .header-menu-list i {
-    top: 12px;
-  }
-
-  .header-icon-list-profile {
-    display: none;
-  }
-  .header-icon-list-search a {
-    position: absolute;
-    bottom: 45px;
-    right: 0px;
-  }
-  .header-icon-list-menu a {
-    position: absolute;
-    top: 10px;
-  }
-} */
+    .header {
+      height: 92px;
+    }
+    .header-inner {
+      display: block;
+    }
+    .header-logo {
+      display: flex;
+      justify-content: center;
+      height: 55px;
+    }
+    .header-menu {
+      display: flex;
+      height: 37px;
+    }
+    .header-menu-list {
+    }
+    .header-menu-list i {
+      top: 12px;
+    }
+  
+    .header-icon-list-profile {
+      display: none;
+    }
+    .header-icon-list-search a {
+      position: absolute;
+      bottom: 45px;
+      right: 0px;
+    }
+    .header-icon-list-menu a {
+      position: absolute;
+      top: 10px;
+    }
+  } */
